# blackRabbit

./: README.md  pyproject.toml
src/: app.py  schema.py  update_results.py
src/api/: constants.py  web3_connection.py
src/api/abi/:  AdvancedVulnerableContract.json  BasicVulnerableContract.json  BasicVulnerableContractABI.json  IntermediateVulnerableContract.json  IntermediateVulnerableContractABI.json  PriceOracle.json  Token.json
src/api/agents/: agents.json  constants.py  create_agents.py  felicia.ipynb  lc_tools.py  llms.py  mas.py  test_my_contract_tools.py  test_whiterabbit.py  tools.py
web/: langgraph.ipynb  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
web/src/components/: ActivityTables.tsx  ContractDetails.tsx  Contracts.tsx  Dashboard.tsx  ReportDetails.tsx  Reports.tsx
web/src/hooks/: useReports.ts
